Adding a diff report and fixing a few bugs

--- a/skia_opt_research/report_template.html
+++ b/skia_opt_research/report_template.html
@@ -10,6 +10,7 @@
         </style>
     </head>
     <body>
+        <a href="./diff/index.html"> Diff Report </a>
         <table>
             <tr>
                 <th>Skp Name</th>
