Adding skp debug links

--- a/skia_opt_research/report_template.html
+++ b/skia_opt_research/report_template.html
@@ -26,7 +26,9 @@
             <tr>
                 <td> <a href="{{ skp['ref_img_url']}}"> {{ skp['name'] }} </a> <br/>
                     <a href="{{ skp['json'] }}"> NO_OPT Json </a> <br/>
-                    <a href = "{{skp['skipass_log']}}">	SkiPass Debug Log </a>
+                    <a href = "{{skp['skipass_log']}}">	SkiPass Debug Log </a> <br/>
+                    <a href = "{{skp['skp_no_opt_url']}}">	NO_OPT SKP </a> <br/>
+                    <a href = "{{skp['skp_ski_pass_url']}}">SKI_PASS_URL </a>
                 </td>
                 <td>
                         <a href = "{{skp['skipass_link']}}">
