--- a/skia_opt_research/report_template.html
+++ b/skia_opt_research/report_template.html
@@ -3,52 +3,122 @@
     <head>
         <meta charset="UTF-8"/>
         <title>{{title}}</title>
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
         <style>
             table, td, th {
-                border: 1px solid
+                border: 1px solid;
+                padding: 3px;
+            }
+            th {
+                text-align: center;
+            }
+            .num_cell {
+                text-align: right;
+            }
+            .summary {
+                font-weight: bold;
             }
         </style>
     </head>
     <body>
+        <div class="container">
+        <h1> SkiPass Report </h1>
         <h2><a href="./diff/report/index.html"> Diff Report </a></h2>
-        <h2> SkiOpt BenchMark </h2>
+        <p/>
+        <h2> Malloc bytes allocated </h2>
+
+        {% for benchmark in benchmarks %}
+        <p/>
+        <h4> TestCases: {{ benchmark['title'] }}</h4>
         <table>
             <tr>
-                <th>Skp Name</th>
-                <th>SKI_PASS </th>
+                <th> Image </th>
             {% for opt in skp_membench_opts %}
-                <th> {{ opt }} </th>
-                <th>  SkiPass % vs <br/> {{opt}} </th>
+                <th> {{skp_membench_opts[opt]['display_name']}} </th>
             {% endfor %}
             </tr>
-
-            {% for skp in skp_membench_results %}
+            {% for skp in benchmark['skps'] if skp['NO_OPT']['bytes'] != '0' %}
             <tr>
-                <td> <a href="{{ skp['ref_img_url']}}"> {{ skp['name'] }} </a> <br/>
-                    <a href = "{{skp['skipass_log']}}">	SkiPass Debug Log </a> <br/>
-                    <a href = "{{skp['skp_no_opt_url']}}">	NO_OPT SKP </a> <br/>
-                    <a href = "{{skp['skp_ski_pass_url']}}">SKI_PASS_URL </a>
-                </td>
-                <td>
-                        <a href = "{{skp['skipass_link']}}">
-                             {{skp['skipass_value']}} 
-                        </a>
+                <td><a href="{{ skp['ref_img_url']}}"> {{ skp['display_name'] }} </a> <br/>
                 </td>
                 {% for opt in skp_membench_opts %}
-                    <td> 
-                        <a href = "{{skp[opt]['link']}}">
-                             {{skp[opt]['value']}} 
+                    <td class="num_cell"> 
+                        <a href = "{{skp[opt]['log']}}">
+                             {{skp[opt]['bytes']}} 
                         </a>
-                    </td>
-                    <td>
-                             {{skp[opt]['comp']}} 
                     </td>
                 {% endfor %}
             </tr>
             {% endfor %}
+            <tr class="summary">
+                <td> Summary </a> <br/>
+                </td>
+                {% for opt in skp_membench_opts %}
+                    <td class="num_cell"> 
+                        {{benchmark['summary'][opt]['bytes']}} 
+                    </td>
+                {% endfor %}
+            </tr>
             
         </table>
+        {% endfor %}
 
+        <p/>
+
+
+        <h1> Debug stuff </h1>
+
+        <h2> Images and SKPs </h2>
+        Download and open the SKP in <a href="http://debugger.skia.org"> debugger.skia.org </a>
+
+        {% for benchmark in benchmarks %}
+        <h4> TestCases: {{ benchmark['title'] }}</h4>
+        <table>
+            <tr>
+                <th> TestCase </th>
+            {% for opt in skp_membench_opts %}
+                <th> {{skp_membench_opts[opt]['display_name']}} </th>
+            {% endfor %}
+            </tr>
+            {% for skp in benchmark['skps'] %}
+                <tr>
+                <td rowspan="2"><a href="{{ skp['ref_img_url']}}"> {{ skp['display_name'] }} </a> <br/>
+                </td>
+                {% for opt in skp_membench_opts %}
+                    <td> 
+                        <a href = "{{skp[opt]['skp']}}">
+                            SKP
+                        </a>
+                    </td>
+                {% endfor %}
+                </tr>
+                <tr>
+                {% for opt in skp_membench_opts %}
+                    <td> 
+                        <a href = "{{skp[opt]['img']}}">
+                            IMG
+                        </a>
+                    </td>
+                {% endfor %}
+                </tr>
+            {% endfor %}
+        </table>
+        <p/>
+        {% endfor %}
+
+        <p/>
+        <h2> SkiPass Debug Logs </h2>
+
+        {% for benchmark in benchmarks %}
+        <h3> {{benchmark['title'] }} </h3>
+            <ul>
+                {% for skp in benchmark['skps'] %}
+                    <li><a href="{{ skp['skipass_log']}}"> {{ skp['display_name'] }} </a></li>
+                {% endfor %}
+            </ul>
+        <p/>
+        {% endfor %}
+        </div>
     </body>
 </html>
 
