--- a/skia_opt_research/report_template.html
+++ b/skia_opt_research/report_template.html
@@ -75,8 +75,9 @@
             {% for opt in skp_membench_opts %}
                 <th> {{skp_membench_opts[opt]['display_name']}} </th>
             {% endfor %}
+            <th> SkiPass (Inside Rust) </th>
             </tr>
-            {% for skp in benchmark['skps'] if skp['NO_OPT']['bytes'] != '0' %}
+            {% for skp in benchmark['skps'] %}
             <tr>
                 <td><a href="{{ skp['ref_img_url']}}"> {{ skp['display_name'] }} </a> <br/>
                 </td>
@@ -85,6 +86,44 @@
                         {{skp[opt]['duration']}} 
                     </td>
                 {% endfor %}
+                <td class = "num_cell">
+                    {{skp['SKI_PASS']['inside_rust']}} 
+                </td>
+            </tr>
+            {% endfor %}
+            </tr>
+            
+        </table>
+        {% endfor %}
+
+        <h3> Duration (Ski Pass breakdown) </h3>
+
+        {% for benchmark in benchmarks %}
+        <p/>
+        <h4> TestCases: {{ benchmark['title'] }}</h4>
+        <table>
+            <tr>
+                <th colspan="2"> Image </th>
+                <th> SkRecord to SkiLang </th>
+                <th> EqSat SkiLang </th>
+                <th> SkiLang to Instructions </th>
+                <th> Outside Rust </th>
+            </tr>
+            {% for skp in benchmark['skps'] %}
+            <tr>
+                <td rowspan="2"><a href="{{ skp['ref_img_url']}}"> {{ skp['display_name'] }} </a> <br/></td>
+                <td> Duration </td>
+                <td class="num_cell"> {{skp['SKI_PASS']['sk_record_to_ski_lang_duration']}} </td>
+                <td class="num_cell"> {{skp['SKI_PASS']['eqsat_duration']}} </td>
+                <td class="num_cell"> {{skp['SKI_PASS']['ski_lang_to_instructions_duration_nano']}} </td>
+                <td class="num_cell"> {{skp['SKI_PASS']['outside_rust']}} </td>
+            </tr>
+            <tr>
+                <td> Percentage </td>
+                <td class="num_cell"> {{"{:.2f}".format(skp['SKI_PASS']['sk_record_to_ski_lang_duration_%'])}} </td>
+                <td class="num_cell"> {{"{:.2f}".format(skp['SKI_PASS']['eqsat_duration_%'])}} </td>
+                <td class="num_cell"> {{"{:.2f}".format(skp['SKI_PASS']['ski_lang_to_instructions_duration_nano_%'])}} </td>
+                <td class="num_cell"> {{"{:.2f}".format(skp['SKI_PASS']['outside_rust_%'])}} </td>
             </tr>
             {% endfor %}
             </tr>
@@ -135,17 +174,6 @@
         {% endfor %}
 
         <p/>
-        <h2> SkiPass Debug Logs </h2>
-
-        {% for benchmark in benchmarks %}
-        <h3> {{benchmark['title'] }} </h3>
-            <ul>
-                {% for skp in benchmark['skps'] %}
-                    <li><a href="{{ skp['skipass_log']}}"> {{ skp['display_name'] }} </a></li>
-                {% endfor %}
-            </ul>
-        <p/>
-        {% endfor %}
         </div>
     </body>
 </html>
